fix: z index on mobile

--- a/components/interactables/QuickProfile/QuickProfile.less
+++ b/components/interactables/QuickProfile/QuickProfile.less
@@ -35,5 +35,6 @@
     position: fixed;
     bottom: 0;
     width: 100%;
+    z-index: 1;
   }
 }
